--- a/libs/client-web/shared/feature/src/lib/address-form/address-form.component.html
+++ b/libs/client-web/shared/feature/src/lib/address-form/address-form.component.html
@@ -117,6 +117,7 @@
 
   <div class="grid grid-cols-2 gap-4 mt-4">
     <p-button
+      severity="secondary"
       [outlined]="true"
       label="Cancel"
       type="button"
