--- a/libs/client-web/account/feature/information/src/lib/components/new-email-form/new-email-form.component.html
+++ b/libs/client-web/account/feature/information/src/lib/components/new-email-form/new-email-form.component.html
@@ -37,6 +37,7 @@
 
   <div class="grid grid-cols-2 gap-4 mt-4">
     <p-button
+      severity="secondary"
       [outlined]="true"
       styleClass="w-full"
       label="Cancel"
