--- a/libs/client-web/account/feature/information/src/lib/components/new-password-form/new-password-form.component.html
+++ b/libs/client-web/account/feature/information/src/lib/components/new-password-form/new-password-form.component.html
@@ -106,6 +106,7 @@
   </lib-form-field>
   <div class="grid grid-cols-2 gap-4 mt-4">
     <p-button
+      severity="secondary"
       [outlined]="true"
       styleClass="w-full"
       label="Cancel"
