--- a/libs/client-web/cart/ui/src/lib/cart-item/cart-item.component.html
+++ b/libs/client-web/cart/ui/src/lib/cart-item/cart-item.component.html
@@ -9,7 +9,7 @@
     >
       <img
         class="object-cover"
-        [ngSrc]="item().book.coverImage ?? 'assets/images/not-found.png'"
+        [ngSrc]="item().book.coverImage ?? ''"
         [alt]="item().book.title + ' cover image'"
         fill
       />
