Change img to p-image in cart-item and change error message in grid-books

--- a/libs/client-web/browse/feature/books/src/lib/books.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/books.component.html
@@ -21,6 +21,7 @@
       [loading]="loading()"
       [error]="error()"
       (addToCartEvent)="addToCart($event)"
+      (onRefetch)="refetchBooks()"
     />
     <div
       class="flex items-center justify-center bg-content-background rounded-base w-full"
