--- a/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
+++ b/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
@@ -15,16 +15,18 @@
         <p-button
           label="Retry"
           icon="pi pi-refresh"
-          (onClick)="refetchData()"
+          (onClick)="retry()"
           severity="secondary"
-        ></p-button>
+        />
       </div>
     } @else if (books()) {
       @for (book of books(); track book.id) {
         <lib-book-card
           [book]="book"
           [awaitingBookIdsToAddToCart]="pendingBookIds()"
+          [favouriteBooks]="favouriteBooks()"
           (onAddToCart)="addToCartEvent.emit($event)"
+          (onAddToFavourite)="addToFavourite($event)"
         />
       } @empty {
         <div
