--- a/libs/client-web/browse/feature/books/src/lib/books.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/books.component.html
@@ -5,9 +5,26 @@
       class="flex flex-col bg-content-background pt-2 pb-4 xl:pb-2 xl:pl-2 xl:pr-4 rounded-base xl:flex-row justify-between gap-base"
     >
       <p-breadcrumb [model]="breadcrumbs()" />
-      <div class="flex items-center justify-between gap-4 px-4 xl:px-0">
-        <lib-search class="w-full" />
-        <lib-filters class="xl:hidden" />
+      <div class="flex flex-col xl:flex-row xl:items-center gap-4 px-4 xl:px-0">
+        <div class="flex items-center justify-between gap-4">
+          <div class="flex items-center gap-base w-full">
+            <lib-sort
+              class="hidden xl:flex"
+              [options]="sortOptions()"
+              [sort]="sort()"
+              (onChangeSort)="changeSort($event)"
+            />
+            <lib-search class="w-full" />
+          </div>
+          <lib-filters class="xl:hidden" />
+        </div>
+
+        <lib-sort
+          class="xl:hidden"
+          [options]="sortOptions()"
+          [sort]="sort()"
+          (onChangeSort)="changeSort($event)"
+        />
       </div>
     </div>
     <lib-active-filters
