--- a/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
+++ b/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
@@ -22,6 +22,7 @@
     } @else if (books()) {
       @for (book of books(); track book.id) {
         <lib-book-card
+          [loading]="loading()"
           [book]="book"
           [awaitingBookIdsToAddToCart]="pendingBookIds()"
           [favouriteBooks]="favouriteBooks()"
