--- a/libs/client-web/browse/ui/src/lib/search/search.component.html
+++ b/libs/client-web/browse/ui/src/lib/search/search.component.html
@@ -3,7 +3,7 @@
     #searchInput
     type="text"
     pInputText
-    [formControl]="searchControl"
+    [(ngModel)]="search"
     class="pr-12"
     [fluid]="true"
     placeholder="Search by title"
