Refactored shopping session and cart items endpoints and add withProps to stores

--- a/libs/client-web/cart/feature/payment-status/src/lib/payment-status.component.html
+++ b/libs/client-web/cart/feature/payment-status/src/lib/payment-status.component.html
@@ -29,7 +29,7 @@
       <span>Pretend that you actually paid for this items :)</span>
       <a
         [routerLink]="appRoutePaths.ORDERS()"
-        [queryParams]="{ orderDetailsId: orderId() }"
+        [queryParams]="{ orderDetailsId: orderDetailsId() }"
         class="text-primary"
       >
         Go to your order details
