--- a/libs/client-web/account/feature/orders/src/lib/orders.component.html
+++ b/libs/client-web/account/feature/orders/src/lib/orders.component.html
@@ -2,20 +2,12 @@
   class="grid grid-cols-1 relative 2xl:grid-cols-2 gap-base [2800px]:grid-cols-[1fr_0.7fr]"
 >
   @if (error()) {
-    <div
-      class="flex flex-col items-center gap-4 rounded-base w-full bg-content-background p-4"
-    >
-      <p class="text-5xl text-center">{{ error() }}</p>
-      <p class="text-xl text-muted-color">
-        Unable to load book details. Please try again.
-      </p>
-      <p-button
-        label="Retry"
-        icon="pi pi-refresh"
-        (onClick)="getOrders()"
-        severity="secondary"
-      ></p-button>
-    </div>
+    <lib-error-and-retry-message
+      class="bg-content-background rounded-base p-4"
+      (onRetry)="getOrders()"
+      unableToLoad="orders"
+      [error]="error()"
+    />
   } @else {
     <p-table
       class="h-content overflow-y-auto 2xl:sticky 2xl:top-4"
@@ -75,35 +67,30 @@
     header="Order details"
     (onHide)="unselectOrder()"
   >
-    <lib-order class="w-full" [orderDetails]="selectedOrder()" />
+    @if (selectedOrderLoading()) {
+      <ng-container *ngTemplateOutlet="orderLoading" />
+    } @else if (selectedOrderError()) {
+      <lib-error-and-retry-message
+        class="bg-content-background p-4 rounded-base"
+        [error]="selectedOrderError()"
+        unableToLoad="order"
+        (onRetry)="getOrderDetails()"
+      />
+    } @else if (selectedOrder()) {
+      <lib-order class="w-full" [orderDetails]="selectedOrder()" />
+    }
   </p-drawer>
 
   <div class="hidden 2xl:flex w-full">
     @if (selectedOrderLoading()) {
-      <div class="flex flex-col gap-base w-full">
-        <p-skeleton width="100%" height="6rem" styleClass="rounded-base" />
-        <p-skeleton width="100%" height="10rem" styleClass="rounded-base" />
-        <p-skeleton width="100%" height="9rem" styleClass="rounded-base" />
-        <p-skeleton width="100%" height="7rem" styleClass="rounded-base" />
-        <p-skeleton width="100%" height="8rem" styleClass="rounded-base" />
-        <p-skeleton width="100%" height="16rem" styleClass="rounded-base" />
-        <p-skeleton width="100%" height="10rem" styleClass="rounded-base" />
-      </div>
+      <ng-container *ngTemplateOutlet="orderLoading" />
     } @else if (selectedOrderError()) {
-      <div
-        class="flex flex-col items-center gap-4 mt-10 w-full bg-content-background p-4"
-      >
-        <p class="text-5xl text-center">{{ selectedOrderError() }}</p>
-        <p class="text-xl text-muted-color">
-          Unable to load book details. Please try again.
-        </p>
-        <p-button
-          label="Retry"
-          icon="pi pi-refresh"
-          (onClick)="getOrderDetails()"
-          severity="secondary"
-        ></p-button>
-      </div>
+      <lib-error-and-retry-message
+        class="bg-content-background p-4 rounded-base"
+        unableToLoad="order"
+        [error]="selectedOrderError()"
+        (onRetry)="getOrderDetails()"
+      />
     } @else if (selectedOrder()) {
       <lib-order class="w-full" [orderDetails]="selectedOrder()" />
     } @else {
@@ -113,3 +100,15 @@
     }
   </div>
 </div>
+
+<ng-template #orderLoading>
+  <div class="flex flex-col gap-base w-full">
+    <p-skeleton width="100%" height="6rem" styleClass="rounded-base" />
+    <p-skeleton width="100%" height="10rem" styleClass="rounded-base" />
+    <p-skeleton width="100%" height="9rem" styleClass="rounded-base" />
+    <p-skeleton width="100%" height="7rem" styleClass="rounded-base" />
+    <p-skeleton width="100%" height="8rem" styleClass="rounded-base" />
+    <p-skeleton width="100%" height="16rem" styleClass="rounded-base" />
+    <p-skeleton width="100%" height="10rem" styleClass="rounded-base" />
+  </div>
+</ng-template>
