Added name to book review and bars to review rate

--- a/libs/client-web/browse/feature/book/src/lib/components/review-form-dialog/review-form-dialog.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/components/review-form-dialog/review-form-dialog.component.html
@@ -1,4 +1,9 @@
-<p-button label="Add review" (onClick)="openDialog()" />
+<p-button
+  styleClass="w-full"
+  severity="secondary"
+  label="Add review"
+  (onClick)="openDialog()"
+/>
 <p-dialog
   header="Add review"
   styleClass="w-full max-w-[48rem] mx-4 w-full"
@@ -7,8 +12,20 @@
 >
   <form class="flex flex-col gap-2" (ngSubmit)="submit()">
     <lib-form-field>
-      <lib-label idFor="rating">Rating</lib-label>
+      <lib-label idFor="name">Name *</lib-label>
+      <input pInputText id="name" [formControl]="form.controls.name" />
+      @if (
+        form.controls.name.errors?.['required'] && form.controls.name.dirty
+      ) {
+        <p-message libErrorMessage>Name is required</p-message>
+      }
+    </lib-form-field>
+    <lib-form-field>
+      <lib-label idFor="rating">Rating *</lib-label>
       <p-rating id="rating" [formControl]="form.controls.rating" />
+      @if (form.controls.rating.errors?.['min'] && form.controls.rating.dirty) {
+        <p-message libErrorMessage>Rating is required</p-message>
+      }
     </lib-form-field>
     <lib-form-field>
       <lib-label idFor="message">Review</lib-label>
