--- a/libs/client-web/browse/feature/book/src/lib/book.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/book.component.html
@@ -50,7 +50,9 @@
       <div class="flex items-center">
         <div class="flex flex-col gap-base w-full">
           <p-breadcrumb [model]="breadcrumbs()" />
-          <div class="grid grid-cols-[1fr_2fr] gap-base lg:grid-cols-1">
+          <div
+            class="grid grid-cols-1 md:grid-cols-[1fr_2fr] gap-base lg:grid-cols-1"
+          >
             <div
               class="relative rounded-base flex lg:hidden items-center h-96 justify-center lg:h-[calc(100svh-2*1rem-5rem)] xl:h-content overflow-hidden lg:sticky lg:top-1 xl:top-4"
             >
@@ -84,6 +86,7 @@
             </div>
           </div>
           <div class="flex flex-col gap-2">
+            <h3 class="text-3xl font-bold">Details</h3>
             <lib-detail-row
               label="Category"
               [value]="book()?.category?.name ?? ''"
@@ -115,27 +118,63 @@
         </div>
       }
 
-      <div class="mt-4 flex flex-col gap-4">
+      <div class="@container mt-4 flex flex-col gap-4">
         <h3 class="text-3xl font-bold">Reviews</h3>
         <div
-          class="flex items-center justify-between gap-4 bg-content-background p-4 rounded-base"
+          class="flex flex-col @3xl:flex-row items-center justify-between gap-12 bg-content-background p-4 rounded-base"
         >
-          <div class="flex flex-col justify-center gap-4">
-            <span>
-              <span class="text-7xl text-primary">{{ averageRating() }}</span>
-              <span class="text-muted-color text-3xl">/5</span>
-            </span>
-            <p-rating [ngModel]="averageRating()" [readonly]="true" />
-            <span class="text-muted-color">
-              ({{ reviews().length }}
-              {{ reviews().length > 1 ? 'reviews' : 'review' }})
-            </span>
+          <div
+            class="flex items-center justify-center xl:justify-start gap-12 w-full"
+          >
+            <div class="flex flex-col justify-center gap-4">
+              <span>
+                <span class="text-7xl text-primary">{{ averageRating() }}</span>
+                <span class="text-muted-color text-3xl">/5</span>
+              </span>
+              <p-rating
+                class="mx-auto"
+                [ngModel]="averageRating()"
+                [readonly]="true"
+              />
+              <span class="text-muted-color mx-auto">
+                ({{ reviews().length }}
+                {{ reviews().length > 1 ? 'reviews' : 'review' }})
+              </span>
+            </div>
+
+            <div class="flex flex-col w-full max-w-[34rem]">
+              @for (rate of groupedRating() | keyvalue; track rate.key) {
+                <div class="flex items-center w-full gap-4">
+                  <div class="flex items-center gap-2">
+                    <span class="pi pi-star-fill text-surface-200"></span>
+                    <span>{{ rate.key }}</span>
+                  </div>
+                  <div class="flex items-center w-full">
+                    <span
+                      [style.width]="
+                        (rate.value / reviews().length) * 100 + '%'
+                      "
+                      class="bg-surface-700 h-2 rounded-l-base"
+                    ></span>
+                    <span
+                      [style.width]="
+                        100 - (rate.value / reviews().length || 0) * 100 + '%'
+                      "
+                      class="bg-surface-200 h-2 rounded-r-base"
+                      [ngClass]="{ 'rounded-l-base': rate.value === 0 }"
+                    ></span>
+                  </div>
+                  <span>{{ rate.value }}</span>
+                </div>
+              }
+            </div>
           </div>
-          <div class="flex flex-col gap-4 items-end justify-end">
-            <span class="text-end">
+
+          <div class="flex flex-col gap-4 items-center justify-center">
+            <span>
               Rate and share your opinion on this book if you bought this book.
             </span>
-            <lib-review-form-dialog />
+            <lib-review-form-dialog class="w-full" />
           </div>
         </div>
         @for (review of reviews(); track review.id) {
@@ -144,7 +183,7 @@
             <div
               class="flex items-center justify-between gap-4 text-muted-color"
             >
-              <span>{{ review.user.email }}</span>
+              <span>{{ review.name }}</span>
               <span>{{ review.createdAt | date }}</span>
             </div>
             <p class="mt-2">{{ review.message }}</p>
